Added template method pattern code